--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build-front": "NODE_ENV=production browserify -g envify -t vueify -e front/index.js -o build/front.js",
     "dev-front": "watchify -dv -t vueify -p browserify-hmr -e front/index.js -o build/front.js",
     "run": "electron .",
-    "lint": "eslint --ext js,vue ./main.js front/*.js front/**/*.vue",
+    "lint": "eslint --ext js,vue ./main.js front/**/*.js front/**/*.vue",
     "postinstall": "mkdir build || true",
     "start": "npm run lint -s & concurrently \"npm run run -s\" \"npm run dev-front -s\""
   },
