--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "Wapcon",
   "private": true,
   "version": "0.0.0",
-  "main": "main.js",
+  "main": "index.js",
   "scripts": {
     "build-front": "NODE_ENV=production browserify -g envify -t vueify -e front/index.js -o build/front.js",
     "dev-front": "watchify -dv -t vueify -p browserify-hmr -e front/index.js -o build/front.js",
