--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint --ext js,vue ./main.js front/**/*.js front/**/*.vue",
     "postinstall": "mkdir build || true",
     "run": "electron .",
-    "start": "npm run lint -s & concurrently \"npm run run -s\" \"npm run dev-front -s\""
+    "start": "npm run lint -s & concurrently \"npm run run -s\" \"npm run dev-front -s\"",
+    "test": "set NODE_ENV=test&& mocha test/front/"
   },
   "dependencies": {
     "browserify": "^14.4.0",
@@ -26,9 +27,12 @@
   },
   "devDependencies": {
     "browserify-hmr": "^0.3.5",
+    "chai": "^4.1.2",
     "concurrently": "^3.4.0",
     "eslint": "^4.0.0",
     "eslint-plugin-html": "^3.0.0",
+    "mocha": "^3.5.3",
+    "sinon": "^4.0.0",
     "watchify": "^3.9.0"
   }
 }
