--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "browserify-hmr": "^0.3.6",
     "chai": "^4.1.2",
+    "chai-as-promised": "^7.1.1",
     "concurrently": "^3.5.1",
     "cross-env": "^5.1.3",
     "eslint": "^4.14.0",
