--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build-front": "cross-env NODE_ENV=production browserify -g envify -t vueify -e front/index.js -o build/front.js",
     "dev-front": "watchify -dv -t vueify -p browserify-hmr -e front/index.js -o build/front.js",
-    "lint": "eslint --ext js,vue ./main.js front/**/*.js front/**/*.vue",
+    "lint": "eslint --ext js,vue ./index.js front/**/*.js front/**/*.vue",
     "postinstall": "mkdir build || echo \"However it's OK.\"",
     "run": "electron .",
     "start": "npm run lint -s & concurrently \"npm run run -s\" \"npm run dev-front -s\"",
