--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "concurrently": "^4.0.0",
     "cross-env": "^5.1.3",
     "eslint": "^5.0.1",
-    "eslint-plugin-html": "^5.0.0",
+    "eslint-plugin-vue": "^5.2.2",
     "mocha": "^6.0.0",
     "sinon": "^7.3.1",
     "watchify": "^3.9.0"
